--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "underscore": "^1.13.1"
   }
 }
